fix white space and overlap

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,7 @@
 
 /* Apply global styles to <html> and <body> */
 html, body {
-  @apply bg-bg dark:bg-darkBg text-text dark:text-darkText min-h-screen;
+  @apply bg-bg dark:bg-darkBg text-text dark:text-darkText min-h-screen overflow-x-hidden;
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
@@ -16,7 +16,8 @@ html, body {
 .App {
   @apply text-center min-h-screen flex flex-col;
 }
+
 /* Removes white border around token images */
 .object-contain {
-border-radius: 50%;
+  border-radius: 50%;
 }
